# bazel-no-tc-target-incompatible

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  rule.bzl  toolchain.bzl
targets/: BUILD.bazel
